--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+#Old files that may cause issues
+Assets/audio clips/Eatpelletonehit.wav
+Assets/audio clips/ghostsnormalstate.wav
+Assets/audio clips/wallcollision.wav
